--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </nav>
   </header>
-  <main class="1-main">
+  <main class="l-main">
 
     <!-- ===== Home ===== -->
     <section class="home" id="home">
@@ -45,7 +45,7 @@
           <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
         </div>
 
-        <img src="/funtion/img2/1.png" alt="" class="home__img">
+        <img loading="lazy" src="/funtion/img2/1.png" alt="" class="home__img">
       </div>
     </section>
 
@@ -56,19 +56,15 @@
 
       <div class="about__container bd-grid">
         <div class="about__img">
-          <img src="/funtion/img2/jac.png" alt="">
+          <img loading="lazy" src="/funtion/img2/perf.png" alt="">
         </div>
 
         <div>
           <h2 class="about__subtitle">I'am Jacobo Tolentino</h2>
-          <span class="about__profession">Web designer</span>
+          <span class="about__profession">Web Developer</span>
           <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, magni autem quia veritatis amet fugiat id et deleniti omnis? Maxime ipsa impedit reprehenderit autem dicta.</p>
-
-          <div class="about__social">
-            <a href="#" class="about__social-icon"><i class='bx bxl-linkedin'></i></a>
-            <a href="#" class="about__social-icon"><i class='bx bxl-github' ></i></a>
-            <a href="#" class="about__social-icon"><i class='bx bxl-dribbble' ></i></a>
-          </div>
+          <!-- <input type="submit" value="My CV" class="cv__button">-->
+          <a href="https://jacobo-88.github.io/my-cv/" class="cv__button">My CV</a>
         </div>
       </div>
     </section>
@@ -93,7 +89,7 @@
           <span class="skills__name">Photoshop</span>
         </div>
         <div class="skills__img">
-          <img src="/funtion/img2/2.jpeg" alt="">
+          <img loading="lazy" src="/funtion/img2/2.jpeg" alt="">
         </div>
       </div>
     </section>
