--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <ul class="nav_list">
           <li class="nav__item"><a href="#home" class="nav_link active">Home</a></li>
           <li class="nav__item"><a href="#about" class="nav_link">About</a></li>
+          <li class="nav__item"><a href="#cv__button" class="nav_link">cv</a></li>
           <li class="nav__item"><a href="#skills" class="nav_link">Skills</a></li>
           <li class="nav__item"><a href="#portfolio" class="nav_link">Portfolio</a></li>
-          <li class="nav__item"><a href="#contact" class="nav_link">Contact</a></li>
+          <li class="nav__item"><a href="#contact" class="nav_link">Contact</a></li>     
         </ul>
       </div>
 
@@ -63,11 +64,15 @@
           <h2 class="about__subtitle">I'am Jacobo Tolentino</h2>
           <span class="about__profession">Web Developer</span>
           <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, magni autem quia veritatis amet fugiat id et deleniti omnis? Maxime ipsa impedit reprehenderit autem dicta.</p>
-          <!-- <input type="submit" value="My CV" class="cv__button">-->
-          <a href="https://jacobo-88.github.io/my-cv/" class="cv__button">My CV</a>
         </div>
       </div>
     </section>
+
+    <!-- botton -->
+    <section class="cv__button section" id="cv__button">
+    <a href="https://jacobo-88.github.io/my-cv/" class="cv__button">My CV</a>     
+    </section>      
+ 
     <!-- ===== SKILLS ===== -->
     <section class="skills section" id="skills">
       <h2 class="section-title">Skills</h2>
@@ -77,7 +82,7 @@
           <h3 class="skills__subtitle">Debelopment</h3>
           <span class="skills__name">Html</span>
           <span class="skills__name">Css</span>
-          <span class="skills__name">Javascript</span>
+i          <span class="skills__name">Javascript</span>
           <span class="skills__name">Scss</span>
           <span class="skills__name">React</span>
           <span class="skills__name">Vue</span>
@@ -94,7 +99,42 @@
       </div>
     </section>
 
-    <!-- ===== HADER ===== -->
+    <!-- ===== portfolio ===== -->
+    <section class="portfolio section" id="portfolio">
+      <h2 class="section-title">Portfolio</h2>
+      <div class="portfolio__container bd-grid">
+        <div class="portfolio__img">
+          <img src="funtion/img2/3.jpeg" alt="">
+          <div class="portfolio__link">
+            <a href="#" class="portfolio__link-name">View detalis</a>
+          </div>
+        </div>
+        <div class="portfolio__img">
+          <img src="funtion/img2/4.jpeg" alt="">
+          <div class="portfolio__link">
+            <a href="#" class="portfolio__link-name">View detalis</a>
+          </div>
+        </div>
+        <div class="portfolio__img">
+          <img src="funtion/img2/5.jpg" alt="">
+          <div class="portfolio__link">
+            <a href="#" class="portfolio__link-name">View detalis</a>
+          </div>
+        </div>
+        <div class="portfolio__img">
+          <img src="funtion/img2/6.jpg" alt="">
+          <div class="portfolio__link">
+            <a href="#" class="portfolio__link-name">View detalis</a>
+          </div>
+        </div>
+        <div class="portfolio__img">
+          <img src="funtion/img2/7.jpg" alt="">
+          <div class="portfolio__link">
+            <a href="#" class="portfolio__link-name">View detalis</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- ===== HADER ===== -->
   </main>
