--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <a href="#" class="nav__logo">Jacobo Tolentino</a>
       </div>
 
-      <div class="nav_menu" id="nav-menu">
-        <ul class="nav_list">
-          <li class="nav__item"><a href="#home" class="nav_link active">Home</a></li>
-          <li class="nav__item"><a href="#about" class="nav_link">About</a></li>
-          <li class="nav__item"><a href="#cv__button" class="nav_link">cv</a></li>
-          <li class="nav__item"><a href="#skills" class="nav_link">Skills</a></li>
-          <li class="nav__item"><a href="#portfolio" class="nav_link">Portfolio</a></li>
-          <li class="nav__item"><a href="#contact" class="nav_link">Contact</a></li>     
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
+          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+          <li class="nav__item"><a href="#cv__button" class="nav__link">cv</a></li>
+          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
+          <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
+          <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>     
         </ul>
       </div>
 
@@ -82,7 +82,7 @@
           <h3 class="skills__subtitle">Debelopment</h3>
           <span class="skills__name">Html</span>
           <span class="skills__name">Css</span>
-i          <span class="skills__name">Javascript</span>
+          <span class="skills__name">Javascript</span>
           <span class="skills__name">Scss</span>
           <span class="skills__name">React</span>
           <span class="skills__name">Vue</span>
@@ -104,31 +104,31 @@ i          <span class="skills__name">Javascript</span>
       <h2 class="section-title">Portfolio</h2>
       <div class="portfolio__container bd-grid">
         <div class="portfolio__img">
-          <img src="funtion/img2/3.jpeg" alt="">
+          <img loading="lazy" src="funtion/img2/3.jpeg" alt="">
           <div class="portfolio__link">
             <a href="#" class="portfolio__link-name">View detalis</a>
           </div>
         </div>
         <div class="portfolio__img">
-          <img src="funtion/img2/4.jpeg" alt="">
+          <img loading="lazy" src="funtion/img2/4.jpeg" alt="">
           <div class="portfolio__link">
             <a href="#" class="portfolio__link-name">View detalis</a>
           </div>
         </div>
         <div class="portfolio__img">
-          <img src="funtion/img2/5.jpg" alt="">
+          <img loading="lazy" src="funtion/img2/5.jpg" alt="">
           <div class="portfolio__link">
             <a href="#" class="portfolio__link-name">View detalis</a>
           </div>
         </div>
         <div class="portfolio__img">
-          <img src="funtion/img2/6.jpg" alt="">
+          <img loading="lazy" src="funtion/img2/6.jpg" alt="">
           <div class="portfolio__link">
             <a href="#" class="portfolio__link-name">View detalis</a>
           </div>
         </div>
         <div class="portfolio__img">
-          <img src="funtion/img2/7.jpg" alt="">
+          <img loading="lazy" src="funtion/img2/7.jpg" alt="">
           <div class="portfolio__link">
             <a href="#" class="portfolio__link-name">View detalis</a>
           </div>
@@ -136,10 +136,53 @@ i          <span class="skills__name">Javascript</span>
       </div>
     </section>
 
-    <!-- ===== HADER ===== -->
+    <!-- ===== contact ===== -->
+    <section class="contact section" id="contact">
+      <h2 class="section-title">Contact</h2>
+       
+      <h2 class="contact__subtitle">You can contact me here</h2>
+      <div class="contact__container bd-grid">
+        <div class="contact__social">
+         <a href="#" class="contact__social-icon"><i class='bx bxl-linkedin' ></i></a>
+         <a href="#" class="contact__social-icon"><i class='bx bxl-github' ></i></a>
+         <a href="#" class="contact__social-icon"><i class='bx bxl-dribbble' ></i></a>
+         <a href="#" class="contact__social-icon"><i class="bx bxl-facebook"></i></a>
+         <a href="#" class="contact__social-icon"><i class="bx bxl-instagram"></i></a>
+         <a href="#" class="contact__social-icon"><i class="bx bxl-twitter"></i></a>
+        </div>
+      </div>
+    </section>
   </main>
 
-  <!-- ===== DOOTER ===== -->
+  <!-- ===== Footer ===== -->
+  <footer class="footer section">
+    <div class="footer__container bd-grid">
+      <div class="footer__data">
+        <h2 class="footer__title">Jacobo Tolentino</h2>
+        <p class="footer__text">I'm Jacobo Tolentino and this is my personal website</p>
+      </div>
+
+      <div class="footer__data">
+        <h2 class="footer__title">EXPLORE</h2>
+        <ul>
+          <li><a href="#home" class="footer__link">home</a></li>
+          <li><a href="#about" class="footer__link">about</a></li>
+          <li><a href="#cv__button" class="footer__link">cv</a></li>
+          <li><a href="#skills" class="footer__link">skills</a></li>
+          <li><a href="#portfolio" class="footer__link">portfolio</a></li>
+          <li><a href="#conrtact" class="footer__link">conrtact</a></li>
+        </ul>
+      </div>
+
+      <div class="footer__data">
+        <h2 class="footer__title">FOLLOW</h2>
+        <a href="#" class="footer__social"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="footer__social"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="footer__social"><i class="bx bxl-twitter"></i></a>
+      </div>
+
+    </div>
+  </footer>
   
   <!-- ===== SCROLL REVEAL ===== -->
   <script src="https://unpkg.com/scrollreveal"></script>
