--- a/index.html
+++ b/index.html
@@ -143,12 +143,13 @@
       <h2 class="contact__subtitle">You can contact me here</h2>
       <div class="contact__container bd-grid">
         <div class="contact__social">
-         <a href="#" class="contact__social-icon"><i class='bx bxl-linkedin' ></i></a>
-         <a href="#" class="contact__social-icon"><i class='bx bxl-github' ></i></a>
-         <a href="#" class="contact__social-icon"><i class='bx bxl-dribbble' ></i></a>
-         <a href="#" class="contact__social-icon"><i class="bx bxl-facebook"></i></a>
-         <a href="#" class="contact__social-icon"><i class="bx bxl-instagram"></i></a>
-         <a href="#" class="contact__social-icon"><i class="bx bxl-twitter"></i></a>
+         <a href="https://www.linkedin.com/in/jacobo-tolentino-serrano-6bb0761b8" class="contact__social-icon"><i class='bx bxl-linkedin bx-tada bx-md ' ></i></a>
+         <a href="https://github.com/Jacobo-88" class="contact__social-icon"><i class='bx bxl-github bx-spin bx-md' ></i></a>
+         <a href="#" class="contact__social-icon"><i class='bx bxl-mailchimp bx-flashing bx-md ' ></i></a>
+         <a href="https://www.facebook.com/TOLSER14" class="contact__social-icon"><i class='bx bxl-facebook bx-burst bx-md ' ></i></a>
+         <a href="https://www.youtube.com/channel/UCpNlxOkhRF3OAVLAx84WTwQ" class="contact__social-icon"><i class='bx bxl-youtube bx-fade-left bx-md ' ></i></a>
+         <a href="#" class="contact__social-icon"><i class='bx bxl-twitter bx-fade-right bx-md ' ></i></a>
+         <a href="#" class="contact__social-icon"><i class='bx bxl-whatsapp bx-fade-up bx-md ' ></i></a>
         </div>
       </div>
     </section>
@@ -176,9 +177,9 @@
 
       <div class="footer__data">
         <h2 class="footer__title">FOLLOW</h2>
-        <a href="#" class="footer__social"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="footer__social"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="footer__social"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="footer__social"><i class="bx bxl-facebook bx-tada bx-md"></i></a>
+        <a href="#" class="footer__social"><i class="bx bxl-instagram bx-tada bx-md"></i></a>
+        <a href="#" class="footer__social"><i class="bx bxl-twitter bx-tada bx-md"></i></a>
       </div>
 
     </div>
