--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="l-header">
     <nav class="nav bd-grid">
       <div>
-        <a href="#" class="nav__logo">Jacobo Tolentino</a>
+        <a href="#" class="nav__logo">JACOBO TOLENTINO SERRANO</a>
       </div>
 
       <div class="nav__menu" id="nav-menu">
@@ -143,13 +143,14 @@
       <h2 class="contact__subtitle">You can contact me here</h2>
       <div class="contact__container bd-grid">
         <div class="contact__social">
-         <a href="https://www.linkedin.com/in/jacobo-tolentino-serrano-6bb0761b8" class="contact__social-icon"><i class='bx bxl-linkedin bx-tada bx-md ' ></i></a>
-         <a href="https://github.com/Jacobo-88" class="contact__social-icon"><i class='bx bxl-github bx-spin bx-md' ></i></a>
-         <a href="#" class="contact__social-icon"><i class='bx bxl-mailchimp bx-flashing bx-md ' ></i></a>
-         <a href="https://www.facebook.com/TOLSER14" class="contact__social-icon"><i class='bx bxl-facebook bx-burst bx-md ' ></i></a>
-         <a href="https://www.youtube.com/channel/UCpNlxOkhRF3OAVLAx84WTwQ" class="contact__social-icon"><i class='bx bxl-youtube bx-fade-left bx-md ' ></i></a>
-         <a href="#" class="contact__social-icon"><i class='bx bxl-twitter bx-fade-right bx-md ' ></i></a>
-         <a href="#" class="contact__social-icon"><i class='bx bxl-whatsapp bx-fade-up bx-md ' ></i></a>
+         <a href="https://www.linkedin.com/in/jacobo-tolentino-serrano-6bb0761b8" class="contact__social-icon"><i class='bx bxl-linkedin bx-tada bx-md ' style='color:#10a7e2'></i></a>
+         <a href="https://github.com/Jacobo-88" class="contact__social-icon"><i class='bx bxl-github bx-spin bx-md' style='color:#110707'></i></a>
+         <a href="#" class="contact__social-icon"><i class='bx bxl-mailchimp bx-flashing bx-md ' style='color:#e7d509'></i></a>
+         <a href="https://www.facebook.com/TOLSER14" class="contact__social-icon"><i class='bx bxl-facebook bx-burst bx-md ' style='color:#0c50ef'></i></a>
+         <a href="https://www.youtube.com/channel/UCpNlxOkhRF3OAVLAx84WTwQ" class="contact__social-icon"><i class='bx bxl-youtube bx-fade-left bx-md ' style='color:#ed0909'></i></a>
+         <a href="#" class="contact__social-icon"><i class='bx bxl-twitter bx-fade-right bx-md ' style='color:#10a7e2'></i></a>
+         <a href="#" class="contact__social-icon"><i class='bx bxl-whatsapp bx-fade-up bx-md ' style='color:#6edc25'></i></a>
+         <a href="#" class="contact__social-icon"><i class='bx bx-envelope-open bx-spin bx-md ' style='color:#ed0909'></i></a>
         </div>
       </div>
     </section>
