--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div>
           <h2 class="about__subtitle">I'am Jacobo Tolentino</h2>
           <span class="about__profession">Web Developer</span>
-          <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, magni autem quia veritatis amet fugiat id et deleniti omnis? Maxime ipsa impedit reprehenderit autem dicta.</p>
+          <p class="about__text">I am a very dedicated and passionate person with the desire to learn and demonstrate my skills that I would like to acquire throughout my professional growth and be able to solve the problems that were presented to me for the implemented solution that is provided to me and to be able to fulfill what was promised</p>
         </div>
       </div>
     </section>
@@ -133,6 +133,11 @@
             <a href="#" class="portfolio__link-name">View detalis</a>
           </div>
         </div>
+       <div class="portfolio__img">
+         <img loading="lazy" src="funtion/img2/3.jpeg" alt="">
+         <div class="portfolio__link">
+            <a href="#" class="portfolio__link-name">View detalis</a>
+          </div>
       </div>
     </section>
 
@@ -149,8 +154,8 @@
          <a href="https://www.facebook.com/TOLSER14" class="contact__social-icon"><i class='bx bxl-facebook bx-burst bx-md ' style='color:#0c50ef'></i></a>
          <a href="https://www.youtube.com/channel/UCpNlxOkhRF3OAVLAx84WTwQ" class="contact__social-icon"><i class='bx bxl-youtube bx-fade-left bx-md ' style='color:#ed0909'></i></a>
          <a href="#" class="contact__social-icon"><i class='bx bxl-twitter bx-fade-right bx-md ' style='color:#10a7e2'></i></a>
-         <a href="#" class="contact__social-icon"><i class='bx bxl-whatsapp bx-fade-up bx-md ' style='color:#6edc25'></i></a>
-         <a href="#" class="contact__social-icon"><i class='bx bx-envelope-open bx-spin bx-md ' style='color:#ed0909'></i></a>
+         <a href="#contact" class="contact__social-icon"><i class='bx bxl-whatsapp bx-fade-up bx-md ' style='color:#6edc25'></i></a>
+         <a href="#contact" class="contact__social-icon"><i class='bx bx-envelope-open bx-spin bx-md ' style='color:#ed0909'></i></a>
         </div>
       </div>
     </section>
@@ -161,6 +166,7 @@
     <div class="footer__container bd-grid">
       <div class="footer__data">
         <h2 class="footer__title">Jacobo Tolentino</h2>
+        <a href="#" class="footer__social"><img src="funtion/img2/contacto.png" alt=""></a>
         <p class="footer__text">I'm Jacobo Tolentino and this is my personal website</p>
       </div>
 
@@ -172,7 +178,7 @@
           <li><a href="#cv__button" class="footer__link">cv</a></li>
           <li><a href="#skills" class="footer__link">skills</a></li>
           <li><a href="#portfolio" class="footer__link">portfolio</a></li>
-          <li><a href="#conrtact" class="footer__link">conrtact</a></li>
+          <li><a href="#contact" class="footer__link">conrtact</a></li>
         </ul>
       </div>
 
