--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
   <link rel="stylesheet" href="/funtion/sass/styles.scss">
   <link rel="stylesheet" href="/funtion/css/styles.css">
   <!-- ===== BOX ICONS ===== -->
-  <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-
+<link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+  <!-- ===== favicon ===== -->
+<link  rel = "apple-touch-icon"  tamaños = "57x57"  href = "funtion/favico/apple-icon-57x57.png" > 
+<link  rel = "apple-touch-icon"  tamaños = "60x60"  href = "funtion/favico/ apple -icon-60x60.png " > 
+<link  rel = " apple-touch-icon "  tamaños = " 72x72 "  href = " funtion/favico/apple-icon-72x72.png " > 
+<link  rel = " apple-touch-icon "  tamaños = "76x76"  href = "funtion/favico/icono-apple-76x76.png" > 
+<link  rel = "apple-touch-icon "  tamaños = " 114x114 "  href = " funtion/favico/apple-icon-114x114.png "> 
+<link  rel = "apple-touch-icon"  tamaños = "120x120"  href = "funtion/favico/apple-icon-120x120.png" > 
+<link  rel = "apple-touch-icon"  tamaños = "144x144"  href = "funtion/favico/ apple-icon-144x144.png " > 
+<link  rel = " apple-touch-icon "  tamaños = " 152x152 "  href = " funtion/favico/apple-icon-152x152.png " > 
+<link  rel = "  tamaños de apple-touch-icon " = "180x180"  href = "funtion/favico/ icono-apple-180x180.png" > 
+<enlace  rel = "icono"  tipo = "imagen / png"  tamaños = "192x192"  href = "funtion/favico/android-icon-192x192.png" > 
+<link  rel = "icon"  type = "image / png"  tamaños = "32x32"  href = "funtion/favico/favicon-32x32.png" > 
+<link  rel = "icon"  type = "image / png"  tamaños = "96x96"  href = "funtion/favico/favicon-96x96.png" > 
+<link  rel = "icon"  type = "image / png"  tamaños = "16x16"  href = "funtion/favico/ favicon-16x16. png " > 
+<link  rel = " manifiesto " href = "funtion/favico/manifest.json" > 
+<meta  nombre ="msapplication-TileColor"  content = "#ffffff" > 
+<meta  name = "msapplication-TileImage"  content = "/ms-icon-144x144.png" > 
+<meta  name = "theme-color"  content = "#ffffff" >
   <title>My web</title>
 </head>
 <body>
