--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -10,6 +10,25 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="section/css/styles.css">
 
+        <!-- ===== favicon ===== -->
+
+        <link  rel = "apple-touch-icon"  tamaños = "57x57"  href = "herram/favicos/apple-icon-57x57.png" > 
+        <link  rel = "apple-touch-icon"  tamaños = "60x60"  href = "herram/favicos/ apple -icon-60x60.png " > 
+        <link  rel = " apple-touch-icon "  tamaños = " 72x72 "  href = " herram/favicos/apple-icon-72x72.png " > 
+        <link  rel = " apple-touch-icon "  tamaños = "76x76"  href = "herram/favicos/icono-apple-76x76.png" > 
+        <link  rel = "apple-touch-icon "  tamaños = " 114x114 "  href = " herram/favicos/apple-icon-114x114.png "> 
+        <link  rel = "apple-touch-icon"  tamaños = "120x120"  href = "herram/favicos/apple-icon-120x120.png" > 
+        <link  rel = "apple-touch-icon"  tamaños = "144x144"  href = "herram/favicos/ apple-icon-144x144.png " > 
+        <link  rel = " apple-touch-icon "  tamaños = " 152x152 "  href = " herram/favicos/apple-icon-152x152.png " > 
+        <link  rel = "  tamaños de apple-touch-icon " = "180x180"  href = "herram/favicos/ icono-apple-180x180.png" > 
+        <enlace  rel = "icono"  tipo = "imagen / png"  tamaños = "192x192"  href = "herram/favicos/android-icon-192x192.png" > 
+        <link  rel = "icon"  type = "image / png"  tamaños = "32x32"  href = "herram/favicos/favicon-32x32.png" > 
+        <link  rel = "icon"  type = "image / png"  tamaños = "96x96"  href = "herram/favicos/favicon-96x96.png" > 
+        <link  rel = "icon"  type = "image / png"  tamaños = "16x16"  href = "herram/favicos/ favicon-16x16. png " > 
+        <link  rel = " manifiesto " href = "herram/favicos/manifest.json" > 
+        <meta  nombre ="msapplication-TileColor"  content = "#ffffff" > 
+        <meta  name = "msapplication-TileImage"  content = "/ms-icon-144x144.png" > 
+        <meta  name = "theme-color"  content = "#ffffff" >
         <title>Responsive resume cv</title>
     </head>
     <body>
