--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -29,7 +29,8 @@
         <meta  nombre ="msapplication-TileColor"  content = "#ffffff" > 
         <meta  name = "msapplication-TileImage"  content = "/ms-icon-144x144.png" > 
         <meta  name = "theme-color"  content = "#ffffff" >
-        <title>Responsive resume cv</title>
+
+        <title>MY CV</title>
     </head>
     <body>
         <!--========== HEADER ==========-->
