--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta  name = "msapplication-TileImage"  content = "/ms-icon-144x144.png" > 
   <meta  name = "theme-color"  content = "#ffffff" >
 
-  <title>My PORFOLIO</title>
+  <title>MY PORFOLIO</title>
 </head>
 <body>
   <!-- ===== HADER ===== -->
