--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
         <!--========== CSS ==========-->
-        <link rel="stylesheet" href="section/css/styles.css">
+        <link rel="stylesheet" href="herram/styles.css">
 
         <!-- ===== favicon ===== -->
 
@@ -35,7 +35,60 @@
     <body>
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
-            
+            <nav class="nav bd-container">
+                <a href="#" class="nav__logo">Jacobo</a>
+
+                <div class="nav__menu" id="nav-menu">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#home" class="nav__link">
+                                <i class='bx bx-home'></i>Home
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#profile" class="nav__link">
+                                <i class='bx bx-user'></i>Profile
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#education" class="nav__link">
+                                <i class='bx bx-book'></i>Education
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#skills" class="nav__link">
+                                <i class='bx bx-receipt'></i>Skills
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#experience" class="nav__link">
+                                <i class='bx bx-briefcase-alt'></i>Experience
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#certificates" class="nav__link">
+                                <i class='bx bx-award'></i>Certificates
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#references" class="nav__link">
+                                <i class='bx bx-link-external'></i>References
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="nav__toggle" id="nav-toggle">
+
+                    <i class='bx bx-grid-alt'></i>
+                </div>
+            </nav>
         </header>
 
         <main class="l-main bd-container">
@@ -108,9 +161,9 @@
         
 
         <!--========== HTML2PDF ==========-->
-        <script src="assets/js/html2pdf.bundle.min.js"></script>
+        <script src="herram/js/html2pdf.bundle.min.js"></script>
 
         <!--========== MAIN JS ==========-->
-        <script src="assets/js/main.js"></script>
+        <script src="herram/js/main.js"></script>
     </body>
 </html>
