--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -204,7 +204,39 @@
 
                     <!--========== SKILLS  ==========-->
                     <section class="skills section" id="skills">
-                        
+                        <h2 class="section-title">SKILLS</h2>
+
+                        <div class="skills__content bd-grid">
+                            <ul class="skills__data">
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Html
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Css
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Javascrip
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Bustrap
+                                </li>
+                            </ul>
+
+                            <ul class="skills__data">
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Node.js
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Angular
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Database
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Version control
+                                </li>
+                            </ul>
+                        </div>
                     </section>
 
                 </div>
@@ -212,7 +244,46 @@
                 <div class="resume__right">
                     <!--========== EXPERIENCE ==========-->
                     <section class="experience section" id="experience">
-                        
+                       <h2 class="section-title">EXPERIENCE</h2>
+
+                       <div class="experience__container bd-grid">
+                           <div class="experience__content">
+                               <div class="experience__time">
+                                   <span class="experience__rounder"></span>
+                                   <span class="experience__line"></span>
+                               </div>
+
+                               <div class="experience__data bd-grid">
+                                   <h3 class="experience__title">MASTER OF DESIGN</h3>
+                                   <span class="experience__conpany">From 2020 - 2021 | tech soft</span>
+                                   <p class="experience__description">Work in this company dedicating the best responsibility in the area that corresponds, delivering the best results for the company and improving productivity.</p>
+                               </div>
+                           </div>
+                           <div class="experience__content">
+                               <div class="experience__time">
+                                   <span class="experience__rounder"></span>
+                                   <span class="experience__line"></span>
+                               </div>
+
+                               <div class="experience__data bd-grid">
+                                   <h3 class="experience__title">MOBILE APLICATION DEVELOPER</h3>
+                                   <span class="experience__conpany">From 2020 - 2021 | tech soft</span>
+                                   <p class="experience__description">Work in this company dedicating the best responsibility in the area that corresponds, delivering the best results for the company and improving productivity.</p>
+                               </div>
+                           </div>
+                           <div class="experience__content">
+                               <div class="experience__time">
+                                   <span class="experience__rounder"></span>
+                                   <!-- <span class="experience__line"></span>-->
+                               </div>
+
+                               <div class="experience__data bd-grid">
+                                   <h3 class="experience__title">UX / UI DESIGN ARE</h3>
+                                   <span class="experience__conpany">From 2020 - 2021 | App soft</span>
+                                   <p class="experience__description">Work in this company dedicating the best responsibility in the area that corresponds, delivering the best results for the company and improving productivity.</p>
+                               </div>
+                           </div>
+                       </div>
                     </section>
 
                     <!--========== CERTIFICATES ==========-->
