--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -99,7 +99,7 @@
                     <section class="home" id="home">
                         <div class="home__container section bd-grid">
                             <div class="home__data bd-grid">
-                                <img src="herram/img/perf.png" alt="" class="home__img">
+                                <img src="herram/img/per4.jpg" alt="" class="home__img">
 
                                 <h1 class="home__title">JACOBO <b>TOLENTINO</b></h1>
                                 <h3 class="home__profession">Web developer</h3>
