--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -124,11 +124,12 @@
                                 </span>
                             </div>
                         </div>
+                        <!-- Theme change button -->
+                        <i class='bx bx-moon change-theme' title="Theme" id="theme-button"></i>
 
+                        <!-- Button to generate and download the pdf. Available for desktop. -->
+                        <i class='bx bx-download generate-pdf' title="Generate PDF" id="resume-button"></i>
                     </section>          
-                    <!-- Button to generate and download the pdf. Available for desktop. -->
-
-                    <!-- Theme change button -->
                     <!--========== SOCIAL ==========-->
                     <section class="social section">
                         <h2 class="section-title">SOCIAL</h2>
@@ -236,10 +237,8 @@
                                     <span class="skills__circle"></span>Version control
                                 </li>
                             </ul>
-                        </div>
+                        </div>   
                     </section>
-
-                </div>
 
                 <div class="resume__right">
                     <!--========== EXPERIENCE ==========-->
@@ -385,7 +384,11 @@
         </main>
 
         <!--========== SCROLL TOP ==========-->
-        
+
+        <a href="#" class="scrolltop" id="scroll-top">
+            
+            <i class='bx bx-up-arrow-alt scrolltop__icon' ></i>
+        </a>
 
         <!--========== HTML2PDF ==========-->
         <script src="herram/js/html2pdf.bundle.min.js"></script>
