--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -101,26 +101,26 @@
                             <div class="home__data bd-grid">
                                 <img src="herram/img/per4.jpg" alt="" class="home__img">
 
+
                                 <h1 class="home__title">JACOBO <b>TOLENTINO</b></h1>
                                 <h3 class="home__profession">Web developer</h3>
+
                                 <!-- Button to download your CV -->
                                 <div>
                                     <a download="" href="herram/pdf/ResumeCv.pdf" class="home__button-movil">Download</a>
                                 </div>
                             </div>
 
+
                             <div class="home__address bd-grid">
-                                <!-- combiar por imagen todos los span-->
-                                <span class="home__informatio">
-                                    <i class='bx bx-map home__icon' ></i>Ciudad de Mexico
+                                <span class="home__information">
+                                    <i class='bx bx-map home__icon' ></i> Ciudad de Mexico
                                 </span>
-
-                                <span class="home__informatio">
-                                    <i class='bx bx-envelope home__icon' ></i>user@hotmail.com
+                                <span class="home__information">
+                                    <i class='bx bx-envelope home__icon' ></i> user@hotmail.com
                                 </span>
-
-                                <span class="home__informatio">
-                                    <i class='bx bx-phone home__icon' ></i>55-67-89-26-54
+                                <span class="home__information">
+                                    <i class='bx bx-phone home__icon' ></i> 55-67-89-26-54
                                 </span>
                             </div>
                         </div>
@@ -134,15 +134,16 @@
                     <section class="social section">
                         <h2 class="section-title">SOCIAL</h2>
 
+
                         <div class="social__container bd-grid">
                             <a href="" target="_blank" class="social__link">
-                                <i class='bx bxl-linkedin-square social__icon'></i>@jacobotolser
+                                <i class='bx bxl-linkedin-square social__icon'></i> @jacobotolser
                             </a>
                             <a href="" target="_blank" class="social__link">
-                                <i class='bx bxl-facebook social__icon'></i>@jacobotolser
+                                <i class='bx bxl-facebook social__icon'></i> @jacobotolser
                             </a>
                             <a href="" target="_blank" class="social__link">
-                                <i class='bx bxl-instagram social__icon'></i>@jacobotolser
+                                <i class='bx bxl-instagram social__icon'></i> @jacobotolser
                             </a>
                         </div>
                     </section>
@@ -239,6 +240,9 @@
                             </ul>
                         </div>   
                     </section>
+
+
+                </div>   
 
                 <div class="resume__right">
                     <!--========== EXPERIENCE ==========-->
