--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -99,7 +99,7 @@
 
 
                                 <h1 class="home__title">JACOBO <b>TOLENTINO</b></h1>
-                                <h3 class="home__profession">Web developer</h3>
+                                <h3 class="home__profession">Web Developer</h3>
 
                                 <!-- Button to download your CV -->
                                 <div>
@@ -110,13 +110,13 @@
 
                             <div class="home__address bd-grid">
                                 <span class="home__information">
-                                    <i class='bx bx-map home__icon' ></i> Ciudad de Mexico
+                                    <i class='bx bx-map home__icon' ></i> Pais Mexico
                                 </span>
                                 <span class="home__information">
-                                    <i class='bx bx-envelope home__icon' ></i> user@hotmail.com
+                                    <i class='bx bx-home-circle home__icon' ></i> Ciudad de Mexico
                                 </span>
                                 <span class="home__information">
-                                    <i class='bx bx-phone home__icon' ></i> 55-67-89-26-54
+                                    <i class='bx bxl-whatsapp home__icon' ></i> 55-67-89-26-54
                                 </span>
                             </div>
                         </div>
@@ -132,14 +132,14 @@
 
 
                         <div class="social__container bd-grid">
-                            <a href="" target="_blank" class="social__link">
-                                <i class='bx bxl-linkedin-square social__icon'></i> @jacobotolser
+                            <a href="https://www.linkedin.com/mwlite/in/jacobo-tolentino-serrano-6bb0761b8" target="_blank" class="social__link">
+                                <i class='bx bxl-linkedin-square social__icon'></i> LINKEDIN
                             </a>
-                            <a href="" target="_blank" class="social__link">
-                                <i class='bx bxl-facebook social__icon'></i> @jacobotolser
+                            <a href="https://www.facebook.com/TOLSER14" target="_blank" class="social__link">
+                                <i class='bx bxl-facebook social__icon'></i> FACEBOOK
                             </a>
-                            <a href="" target="_blank" class="social__link">
-                                <i class='bx bxl-instagram social__icon'></i> @jacobotolser
+                            <a href="https://mobile.twitter.com/?lang=es" target="_blank" class="social__link">
+                                <i class='bx bxl-twitter social__icon'></i> @CodeTolser
                             </a>
                         </div>
                     </section>
@@ -164,9 +164,9 @@
 
 
                                 <div class="education__data bd-grid">
-                                    <h3 class="education__title">MASTER OF DESIGN</h3>
-                                    <span class="education__studies">University od Srudies</span>
-                                    <span class="education__year">2019 - 2021</span>
+                                    <h3 class="education__title">WEB DEVELOPMENT COURSE</h3>
+                                    <span class="education__studies">Online courses completed</span>
+                                    <span class="education__year">2020 - 2021</span>
                                 </div>
                             </div>
 
@@ -180,8 +180,8 @@
 
                                 <div class="education__data bd-grid">
                                     <h3 class="education__title">WEB DEVELOPER</h3>
-                                    <span class="education__studies">Institute Srudies</span>
-                                    <span class="education__year">2019 - 2021</span>
+                                    <span class="education__studies">Online courses completed</span>
+                                    <span class="education__year">2020 - 2021</span>
                                 </div>
                             </div>
 
@@ -194,9 +194,9 @@
 
 
                                 <div class="education__data bd-grid">
-                                    <h3 class="education__title">MASTER IN UI/UX</h3>
-                                    <span class="education__studies">Institute Srudies</span>
-                                    <span class="education__year">2019 - 2021</span>
+                                    <h3 class="education__title">UI/UX</h3>
+                                    <span class="education__studies">Online courses completed</span>
+                                    <span class="education__year">2020 - 2021</span>
                                 </div>
                             </div>
                         </div>
@@ -233,15 +233,15 @@
                                     <span class="skills__circle"></span>Database
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Version control
+                                    <span class="skills__circle"></span>Git
                                 </li>
                             </ul>
                         </div>   
                     </section>
                 </div>
                 <div class="resume__right">
-                    <!--========== EXPERIENCE ==========-->
-                    <section class="experience section" id="experience">
+                    <!--========== EXPERIENCE ========-->               <section class="experience section" id="experience">
+                        
                        <h2 class="section-title">EXPERIENCE</h2>
 
 
@@ -254,9 +254,9 @@
 
 
                                <div class="experience__data bd-grid">
-                                   <h3 class="experience__title">MASTER OF DESIGN</h3>
+                                   <h3 class="experience__title">INTERNSHIP IN WEB DEVELOPMENT</h3>
                                    <span class="experience__conpany">From 2020 - 2021 | tech soft</span>
-                                   <p class="experience__description">Work in this company dedicating the best responsibility in the area that corresponds, delivering the best results for the company and improving productivity.</p>
+                                   <p class="experience__description">Carrying out practical projects in the development of pages, portfolios, games, etc.  For anyone who will request it by applying my skills.</p>
                                </div>
                            </div>
                            <div class="experience__content">
@@ -266,9 +266,9 @@
                                </div>
 
                                <div class="experience__data bd-grid">
-                                   <h3 class="experience__title">MOBILE APLICATION DEVELOPER</h3>
+                                   <h3 class="experience__title">WEB APPLICATION DEVELOPER</h3>
                                    <span class="experience__conpany">From 2020 - 2021 | tech soft</span>
-                                   <p class="experience__description">Work in this company dedicating the best responsibility in the area that corresponds, delivering the best results for the company and improving productivity.</p>
+                                   <p class="experience__description">Carrying out practical projects web applications for personal use or when requested personally.</p>
                                </div>
                            </div>
                            <div class="experience__content">
@@ -277,11 +277,11 @@
                                    <!-- <span class="experience__line"></span>-->
                                </div>
 
-                               <div class="experience__data bd-grid">
-                                   <h3 class="experience__title">UX / UI DESIGN ARE</h3>
-                                   <span class="experience__conpany">From 2020 - 2021 | App soft</span>
-                                   <p class="experience__description">Work in this company dedicating the best responsibility in the area that corresponds, delivering the best results for the company and improving productivity.</p>
-                               </div>
+                                <div>
+                                    <h3 class="experience__title">MY PORTFOLIO</h3>
+                                    <span class="experience__conpany">From 2020 - 2021 | tech soft</span>
+                                    <p class="experience__description">You can check my skills in the link https://jacobo-88.github.io/</p>
+                                </div>
                            </div>
                        </div>
                     </section>
@@ -302,7 +302,7 @@
                            </div>
 
                            <div class="certificate__content">
-                               <h3 class="certificate__title">Achievement medal for productivity excellence during the year (2020)</h3>
+                               <h3 class="certificate__title">Recognition for productivity excellence during the year (2020)</h3>
                                <p class="certificate__description">Certified for compliance in the work area (2020)</p>
                            </div>
                        </div>
@@ -323,7 +323,7 @@
                            </div>
 
                            <div class="refernces__content bd-grid">
-                               <span class="references__subtitle">Web Developer</span>
+                               <span class="references__subtitle">Professor in web development</span>
                                <h3 class="references__title">Teacher Eduardo Ponce</h3>
                                <ul class="references__contact">
                                    <li>Phone: 5574208522</li>
