--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -138,7 +138,7 @@
                             <a href="https://www.facebook.com/TOLSER14" target="_blank" class="social__link">
                                 <i class='bx bxl-facebook social__icon'></i> FACEBOOK
                             </a>
-                            <a href="https://mobile.twitter.com/?lang=es" target="_blank" class="social__link">
+                            <a href="https://mobile.twitter.com/codetolser" target="_blank" class="social__link">
                                 <i class='bx bxl-twitter social__icon'></i> @CodeTolser
                             </a>
                         </div>
