--- a/index.html
+++ b/index.html
@@ -99,19 +99,23 @@
 
       <div class="skills__container bd-grid">
         <div class="skills__box">
-          <h3 class="skills__subtitle">Debelopment</h3>
+          <h3 class="skills__subtitle">Technology</h3>
           <span class="skills__name">Html</span>
           <span class="skills__name">Css</span>
           <span class="skills__name">Javascript</span>
           <span class="skills__name">Scss</span>
+          <span class="skills__name">Node</span>
           <span class="skills__name">React</span>
-          <span class="skills__name">Vue</span>
+          <span class="skills__name">Database</span>
+          <span class="skills__name">Git</span>
+          <span class="skills__name">Python</span>
+          <span class="skills__name">Docker</span>
 
 
           <h3 class="skills__subtitle">Design</h3>
-          <span class="skills__name">Figma</span>
           <span class="skills__name">Adobe XD</span>
           <span class="skills__name">Photoshop</span>
+          <span class="skills__name">Bootstrap</span>
         </div>
         <div class="skills__img">
           <img loading="lazy" src="/funtion/img2/2.jpeg" alt="">
@@ -126,31 +130,31 @@
         <div class="portfolio__img">
           <img loading="lazy" src="funtion/img2/3.jpeg" alt="">
           <div class="portfolio__link">
-            <a href="#" class="portfolio__link-name">View detalis</a>
+            <a href="#" class="portfolio__link-name">Project view</a>
           </div>
         </div>
         <div class="portfolio__img">
           <img loading="lazy" src="funtion/img2/4.jpeg" alt="">
           <div class="portfolio__link">
-            <a href="#" class="portfolio__link-name">View detalis</a>
+            <a href="#" class="portfolio__link-name">Project view</a>
           </div>
         </div>
         <div class="portfolio__img">
           <img loading="lazy" src="funtion/img2/5.jpg" alt="">
           <div class="portfolio__link">
-            <a href="#" class="portfolio__link-name">View detalis</a>
+            <a href="#" class="portfolio__link-name">Project view</a>
           </div>
         </div>
         <div class="portfolio__img">
           <img loading="lazy" src="funtion/img2/6.jpg" alt="">
           <div class="portfolio__link">
-            <a href="#" class="portfolio__link-name">View detalis</a>
+            <a href="#" class="portfolio__link-name">Project view</a>
           </div>
         </div>
         <div class="portfolio__img">
           <img loading="lazy" src="funtion/img2/7.jpg" alt="">
           <div class="portfolio__link">
-            <a href="#" class="portfolio__link-name">View detalis</a>
+            <a href="#" class="portfolio__link-name">Project view</a>
           </div>
         </div>
        <div class="portfolio__img">
@@ -165,7 +169,7 @@
     <section class="contact section" id="contact">
       <h2 class="section-title">Contact</h2>
        
-      <h2 class="contact__subtitle">You can contact me here</h2>
+      <h2 class="contact__subtitle">My contact social networks</h2>
       <div class="contact__container bd-grid">
         <div class="contact__social">
          <a href="https://www.linkedin.com/in/jacobo-tolentino-serrano-6bb0761b8" class="contact__social-icon"><i class='bx bxl-linkedin bx-tada bx-md ' style='color:#10a7e2'></i></a>
@@ -187,7 +191,7 @@
       <div class="footer__data">
         <h2 class="footer__title">Jacobo Tolentino</h2>
         <a href="#" class="footer__social"><img src="funtion/img2/contacto.png" alt=""></a>
-        <p class="footer__text">I'm Jacobo Tolentino and this is my personal website</p>
+        <p class="footer__text">Hi this is my personal website</p>
       </div>
 
       <div class="footer__data">
