--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -103,7 +103,7 @@
 
                                 <!-- Button to download your CV -->
                                 <div>
-                                    <a download="" href="herram/pdf/micv.pdf" class="home__button-movil">Download</a>
+                                    <a download="" href="herram/pdf/Resumen1.pdf" class="home__button-movil">Download</a>
                                 </div>
                             </div>
 
@@ -218,16 +218,17 @@
                                     <span class="skills__circle"></span>Javascrip
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Bustrap
+                                    <span class="skills__circle"></span>Node.js
                                 </li>
                             </ul>
 
+
                             <ul class="skills__data">
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Node.js
+                                    <span class="skills__circle"></span>React
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Angular
+                                    <span class="skills__circle"></span>Python
                                 </li>
                                 <li class="skills__name">
                                     <span class="skills__circle"></span>Database
