--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <!-- ===== portfolio ===== -->
     <section class="portfolio section" id="portfolio">
-      <h2 class="section-title">Portfolio</h2>
+      <h2 class="section-title">FREELANCE EXPERIENCE</h2>
       <div class="portfolio__container bd-grid">
         <div class="portfolio__img">
           <img loading="lazy" src="funtion/img2/3.jpeg" alt="">
