--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -255,7 +255,7 @@
 
 
                                <div class="experience__data bd-grid">
-                                   <h3 class="experience__title">INTERNSHIP IN WEB DEVELOPMENT</h3>
+                                   <h3 class="experience__title">INTERNSHIP IN WEB DEVELOPMENT FREELANCER</h3>
                                    <span class="experience__conpany">From 2020 - 2021 | tech soft</span>
                                    <p class="experience__description">Carrying out practical projects in the development of pages, portfolios, games, etc.  For anyone who will request it by applying my skills.</p>
                                </div>
@@ -267,7 +267,7 @@
                                </div>
 
                                <div class="experience__data bd-grid">
-                                   <h3 class="experience__title">WEB APPLICATION DEVELOPER</h3>
+                                   <h3 class="experience__title">WEB APPLICATION DEVELOPER FREELANCER</h3>
                                    <span class="experience__conpany">From 2020 - 2021 | tech soft</span>
                                    <p class="experience__description">Carrying out practical projects web applications for personal use or when requested personally.</p>
                                </div>
