--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
           <h3 class="skills__subtitle">Design</h3>
-          <span class="skills__name">Adobe XD</span>
+          <span class="skills__name">Adobe</span>
           <span class="skills__name">Photoshop</span>
           <span class="skills__name">Bootstrap</span>
         </div>
