--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -103,7 +103,7 @@
 
                                 <!-- Button to download your CV -->
                                 <div>
-                                    <a download="" href="herram/pdf/Resumen1.pdf" class="home__button-movil">Download</a>
+                                    <a download="" href="herram/pdf/myResume.pdf" class="home__button-movil">Download</a>
                                 </div>
                             </div>
 
