--- a/Reproductor-Music/index.html
+++ b/Reproductor-Music/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
 
-  <title>Music Player</title>
+  <title>Music</title>
 </head>
 <body> 
   <h1>Music Player</h1>
