--- a/Reproductor-Music/index.html
+++ b/Reproductor-Music/index.html
@@ -5,6 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
+  <!-- ===== favicon ===== -->
+
+  <link  rel = "apple-touch-icon"  tamaños = "57x57"  href = "favico/apple-icon-57x57.png" > 
+  <link  rel = "apple-touch-icon"  tamaños = "60x60"  href = "favico/ apple -icon-60x60.png " > 
+  <link  rel = " apple-touch-icon "  tamaños = " 72x72 "  href = "favico/apple-icon-72x72.png " > 
+  <link  rel = " apple-touch-icon "  tamaños = "76x76"  href = "favico/icono-apple-76x76.png" > 
+  <link  rel = "apple-touch-icon "  tamaños = " 114x114 "  href = "favico/apple-icon-114x114.png "> 
+  <link  rel = "apple-touch-icon"  tamaños = "120x120"  href = "funtion/favico/apple-icon-120x120.png" > 
+  <link  rel = "apple-touch-icon"  tamaños = "144x144"  href = "favico/ apple-icon-144x144.png " > 
+  <link  rel = " apple-touch-icon "  tamaños = " 152x152 "  href = "favico/apple-icon-152x152.png " > 
+  <link  rel = "  tamaños de apple-touch-icon " = "180x180"  href = "favico/ icono-apple-180x180.png" > 
+  <enlace  rel = "icono"  tipo = "imagen / png"  tamaños = "192x192"  href = "favico/android-icon-192x192.png" > 
+  <link  rel = "icon"  type = "image / png"  tamaños = "32x32"  href = "favico/favicon-32x32.png" > 
+  <link  rel = "icon"  type = "image / png"  tamaños = "96x96"  href = "favico/favicon-96x96.png" > 
+  <link  rel = "icon"  type = "image / png"  tamaños = "16x16"  href = "favico/ favicon-16x16. png " > 
+  <link  rel = " manifiesto " href = "favico/manifest.json" > 
+  <meta  nombre ="msapplication-TileColor"  content = "#ffffff" > 
+  <meta  name = "msapplication-TileImage"  content = "/ms-icon-144x144.png" > 
+  <meta  name = "theme-color"  content = "#ffffff" >
 
   <title>Music</title>
 </head>
