--- a/my-cv/index.html
+++ b/my-cv/index.html
@@ -110,10 +110,10 @@
 
                             <div class="home__address bd-grid">
                                 <span class="home__information">
-                                    <i class='bx bx-map home__icon' ></i> Pais Mexico
+                                    <i class='bx bx-map home__icon' ></i> Country: MEXICO
                                 </span>
                                 <span class="home__information">
-                                    <i class='bx bx-home-circle home__icon' ></i> Ciudad de Mexico
+                                    <i class='bx bx-home-circle home__icon' ></i> Mexico City
                                 </span>
                                 <span class="home__information">
                                     <i class='bx bxl-whatsapp home__icon' ></i> 55-67-89-26-54
@@ -145,10 +145,8 @@
                     </section>
                     <!--========== PROFILE ==========-->
                     <section class="profile section" id="profile">
-                       <h2 class="section-title">PROFILE</h2> 
-
-
-                       <p class="profile__description">I am a person, responsible with their work during working hours. Finish various technical and higher studies at large universities. I have several years of experience and achievements in the labor field.</p>
+                       <h2 class="section-title">PROFILE</h2>
+                       <p class="profile__description">I am a person, professionally dedicated to my work to be able to bring my acquired knowledge to be able to apply and solve any problem presented in my growth, with extensive knowledge and gain experience for better work and professional performance.</p>
                     </section>
                     <!--========== EDUCATION ==========-->
                     <section class="education section" id="education">
@@ -201,50 +199,28 @@
                             </div>
                         </div>
                     </section>
-                    <!--========== SKILLS  ==========-->
-                    <section class="skills section" id="skills">
-                        <h2 class="section-title">SKILLS</h2>
-
-
-                        <div class="skills__content bd-grid">
-                            <ul class="skills__data">
-                                <li class="skills__name">
-                                    <span class="skills__circle"></span>Html
-                                </li>
-                                <li class="skills__name">
-                                    <span class="skills__circle"></span>Css
-                                </li>
-                                <li class="skills__name">
-                                    <span class="skills__circle"></span>Javascrip
-                                </li>
-                                <li class="skills__name">
-                                    <span class="skills__circle"></span>Node.js
-                                </li>
-                            </ul>
-
-
-                            <ul class="skills__data">
-                                <li class="skills__name">
-                                    <span class="skills__circle"></span>React
-                                </li>
-                                <li class="skills__name">
-                                    <span class="skills__circle"></span>Python
-                                </li>
-                                <li class="skills__name">
-                                    <span class="skills__circle"></span>Database
-                                </li>
-                                <li class="skills__name">
-                                    <span class="skills__circle"></span>Git
-                                </li>
-                            </ul>
-                        </div>   
-                    </section>
+                    <!--========== References  ==========-->
+                    <section class="references section" id="references">
+                        <h2 class="section-title">REFERENCES</h2>
+                        <div class="references__container bd-grid">
+                            <div class="references__content">
+                                <div class="references__time">
+                                    <span class="references__rounder"></span>
+                                    <!--     <span class="references__line"></span>-->
+                                </div>
+                                <div class="references__data bd-grid">
+                                    <h3 class="references__title">Carlos P. School Principal</h3>
+                                    <span class="references__studies">Phone : 5551802180</span>
+                                    <span class="references__year">Email: user@email.com</span>
+                                </div>
+                            </div>
+                        </div>
+                    </section>       
                 </div>
                 <div class="resume__right">
-                    <!--========== EXPERIENCE ========-->               <section class="experience section" id="experience">
-                        
+                    <!--========== EXPERIENCE =======--> 
+                    <section class="experience section" id="experience">
                        <h2 class="section-title">EXPERIENCE</h2>
-
 
                        <div class="experience__container bd-grid">
                            <div class="experience__content">
@@ -308,31 +284,6 @@
                            </div>
                        </div>
                     </section>
-                    <!--========== REFERENCES ==========-->
-                    <section class="references section" id="references">
-                       <h2 class="section-title">REFERENCES</h2>
-
-                       
-                       <div class="references__container bd-grid">
-                           <div class="refernces__content bd-grid">
-                               <span class="references__subtitle">Sr. Director</span>
-                               <h3 class="references__title">Teacher Carlos</h3>
-                               <ul class="references__contact">
-                                   <li>Phone: 5551802180</li>
-                                   <li>Email: user@email.com</li>
-                               </ul>
-                           </div>
-
-                           <div class="refernces__content bd-grid">
-                               <span class="references__subtitle">Professor in web development</span>
-                               <h3 class="references__title">Teacher Eduardo Ponce</h3>
-                               <ul class="references__contact">
-                                   <li>Phone: 5574208522</li>
-                                   <li>Email: user@email.com</li>
-                               </ul>
-                           </div>
-                       </div>
-                    </section>
                     <!--========== LANGUAGES ==========-->
                     <section class="languages section">
                        <h2 class="section-title">LANGUAGES</h2>
@@ -349,6 +300,58 @@
                                </li>
                            </ul>
                        </div>
+                    </section>
+                    <!--========== Skills ==========-->
+                    <section class="skills section" id="skills">
+                        <h2 class="section-title">SKILLS</h2>
+
+                        <div class="skills__content bd-grid">
+                            <ul class="skills__data">Frontend
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Html
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Css
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Javascrip
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Node.js
+                                </li>
+                            </ul>
+
+
+                            <ul class="skills__data">Backend
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>React
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Python
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Database
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Git
+                                </li>
+                            </ul>
+
+                            <ul class="skills__data">Specific
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Git
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Git
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Git
+                                </li>
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Git
+                                </li>
+                            </ul>
+                        </div>   
                     </section>
                     <!--========== INTERESTS ==========-->
                     <section class="interests section">
